--- a/curriculum HTML/index.html
+++ b/curriculum HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Curriculo Kobe Jeque</title>
 </head>
 
@@ -14,7 +14,7 @@
 
         <h1>Curriculum Vitae</h1>
 
-        <img class="foto-perfil" src="acessets\imagens\275689661_257916863087341_2722806612363456609_n.jpg">
+        <img class="foto-perfil" src=".\acessets\imagens\275689661_257916863087341_2722806612363456609_n.jpg">
 
     </section>
 
